spacing issue fixed

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -1888,9 +1888,9 @@ hr {
 }
 
 .wp-block-search.aligncenter .wp-block-search__inside-wrapper,
-.wp-block[data-align=“center”] .wp-block-search .wp-block-search__inside-wrapper,
+.wp-block[data-align="center"] .wp-block-search .wp-block-search__inside-wrapper,
 .wp-block-search.aligncenter .wp-block-search__label,
-.wp-block[data-align=“center”] .wp-block-search .wp-block-search__label {
+.wp-block[data-align="center"] .wp-block-search .wp-block-search__label {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
